--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -823,3 +823,15 @@ flash:
   reply_sent_success: "Reply saved and sent successfully!"
   reply_required: "Please write a reply."
 
+
+receipt.greeting: "Hello <strong>%name%</strong>,"
+receipt.thanks: "Thank you for your order. Here is a summary of your purchase:"
+receipt.order_number: "Order number"
+receipt.total_amount: "Total amount"
+receipt.notice: "The beneficiary must present an identity document, the order reference, and the secret code."
+receipt.send_reference: "Please send this reference: %ref% and the secret code: %code%"
+receipt.products: "Products"
+receipt.delivery: "Delivery to"
+receipt.name: "Name"
+receipt.address: "Address"
+receipt.signature: "Kind regards,"
