Mise à jour du twig show stripeControlleur translaite mail client_beneficiery_name

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -828,7 +828,7 @@ receipt.greeting: "Hello <strong>%name%</strong>,"
 receipt.thanks: "Thank you for your order. Here is a summary of your purchase:"
 receipt.order_number: "Order number"
 receipt.total_amount: "Total amount"
-receipt.notice: "The beneficiary must present an identity document, the order reference, and the secret code."
+receipt.notice: "The beneficiary <strong>%beneficiary%</strong> must present an identity document, the order reference, and the secret code."
 receipt.send_reference: "Please send this reference: %ref% and the secret code: %code%"
 receipt.products: "Products"
 receipt.delivery: "Delivery to"
