--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -830,7 +830,7 @@ receipt.greeting: "Bonjour <strong>%name%</strong>,"
 receipt.thanks: "Merci pour votre commande. Voici le récapitulatif de votre achat :"
 receipt.order_number: "Numéro de commande"
 receipt.total_amount: "Montant total"
-receipt.notice: "Le bénéficiaire devra présenter une pièce d'identité, la référence de commande et le code secret."
+receipt.notice: "Le bénéficiaire <strong>%beneficiary%</strong> devra présenter une pièce d'identité, la référence de commande et le code secret."
 receipt.send_reference: "Veuillez transmettre la référence : %ref% et le code secret : %code%"
 receipt.products: "Produits"
 receipt.delivery: "Livraison à"
