--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -817,7 +817,7 @@ receipt.greeting: "Olá <strong>%name%</strong>,"
 receipt.thanks: "Obrigado pela sua encomenda. Aqui está o resumo da sua compra:"
 receipt.order_number: "Número da encomenda"
 receipt.total_amount: "Valor total"
-receipt.notice: "O beneficiário deverá apresentar seu documento de identidade, referência da encomenda e o codigo secreto."
+receipt.notice: "O beneficiário <strong>%beneficiary%</strong> deverá apresentar seu documento de identidade, referência da encomenda e o codigo secreto."
 receipt.send_reference: "Deves envia-lo essa referência : %ref% e o codigo secreto : %code%"
 receipt.products: "Produtos"
 receipt.delivery: "Entrega para"
