Mise à jour du twig show stripeControlleur translaite mail client style font-size_shopAdress

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -835,3 +835,7 @@ receipt.delivery: "Delivery to"
 receipt.name: "Name"
 receipt.address: "Address"
 receipt.signature: "Kind regards,"
+
+
+products.table.item: "Item"
+products.table.store: "Store"
