Mise à jour  orderCrudControllerr

--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -399,11 +399,11 @@ order:
     final_price2: "Precio final (Total + comisión de la plataforma)"
     beneficiary_name: "Beneficiario"
     beneficiary_email: "Email del beneficiario"
-    beneficiary_address: "Dirección del beneficiario"
+    beneficiary_address: "Dirección beneficiario"
     items: "Artículos"
     internal_note: "Nota interna"
     merchant_secret_code: "Código secreto"
-    customer_note2: "Comentario del cliente"
+    customer_note2: "Comentario cliente"
     refund: "Reembolso"
     refund_amount: "Importe"
     refund_status: "Estado del reembolso"
