--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -401,11 +401,11 @@ order:
     final_price2: "Preço final (Total + comissão da plataforma)"
     beneficiary_name: "Beneficiário"
     beneficiary_email: "Email do beneficiário"
-    beneficiary_address: "Endereço do beneficiário"
+    beneficiary_address: "Endereço beneficiário"
     items: "Artigos"
-    internal_note: "Notificação da loja"
+    internal_note: "Notificação loja"
     merchant_secret_code: "Código secreto"
-    customer_note2: "Comentário do cliente"
+    customer_note2: "Comentário cliente"
     refund: "Reembolso"
     refund_amount: "Montante"
     refund_status: "Estado do reembolso"
